# crisp-game-lib-portable

./: .gitignore  Doxyfile  README.md  index.html  package.json  runEmcc.js  vite.config.js  wasmHmr.js
convert_prompt/: prompt.txt
convert_prompt/knowledge/: cglp.h  gameThunder.c  pinclimb.js  thunder.js
public/wasm/: cglp.js  cglp.wasm  game.js
src/browser/: character.js  input.js  main.js  view.js
src/c/: cglp.c  cglp.h  game.c  m5stickcplus.ino  machineDependent.h  particle.c  pinclimb.c  random.c  random.h  sound.c  sound.h  textPattern.c  textPattern.h  thunder.c
src/cglpM5StickCPlus/: cglp.c  cglpM5StickCPlus.ino  gameBallTour.c  gameSurvivor.c  menu.h  particle.h  vector.c
src/cglpPlaydate/: CMakeLists.txt
src/cglpPlaydate/Source/: pdxinfo
src/cglpPlaydate/src/: cglpPlaydate.c
src/cglpPyBadge/: cglp.h  cglpPyBadge.ino  gameColorRoll.c  gameThunder.c  machineDependent.h  sound.h  textPattern.c  vector.h
src/extragames/: gameAntLion.c  gameBBlast.c  gameBCannon.c  gameBWalls.c  gameBalance.c  gameBallsBombs.c  gameBamboo.c  gameBaroll.c  gameBombUp.c  gameBreedC.c  gameCNodes.c  gameCTower.c  gameCardQ.c  gameCatapult.c  gameCateP.c  gameChargeBeam.c  gameCircleW.c  gameCounterB.c  gameCrossLine.c
src/games/: balltour.c  colorroll.c  gameAeralBar.c  gameBSFish.c  gameBallTour.c  gameBallsBombs.c  gameBombUp.c  gameBreedC.c  gameCastN.c  gameColorRoll.c  gameFracave.c  gameFroooog.c  gameGrapplingH.c  gameHexmin.c  gameInTow.c  gameLadderDrop.c  gamePakuPaku.c  gamePinClimb.c  gameRWheel.c  gameReflector.c  gameSurvivor.c  gameThunder.c  (+6 more)
(+40 files in other folders)
